fix(mdbook): align with upstream

--- a/styles/mdbook/catppuccin.user.less
+++ b/styles/mdbook/catppuccin.user.less
@@ -50,15 +50,15 @@
     --sidebar-spacer: @overlay0;
     --scrollbar: @overlay0;
     --icons: @overlay0;
-    --icons-hover: @overlay1;
+    --icons-hover: @overlay2;
     --links: @blue;
-    --inline-code-color: @peach;
+    --inline-code-color: @text;
     --theme-popup-bg: @mantle;
     --theme-popup-border: @overlay0;
     --theme-hover: @overlay0;
     --quote-bg: @mantle;
     --quote-border: @crust;
-    --table-border-color: @crust;
+    --table-border-color: @surface0;
     --table-header-bg: @mantle;
     --table-alternate-bg: @mantle;
     --searchbar-border-color: @surface0;
@@ -68,14 +68,17 @@
     --searchresults-header-fg: @text;
     --searchresults-border-color: @surface2;
     --searchresults-li-bg: @base;
+    --sidebar-header-border-color: @lavender;
     --search-mark-bg: @peach;
     --warning-border: @peach;
+    --copy-button-filter: @subtext0-filter;
+    --copy-button-filter-hover: @blue-filter;
     --blockquote-note-color: @blue;
     --blockquote-tip-color: @green;
     --blockquote-important-color: @mauve;
     --blockquote-warning-color: @yellow;
     --blockquote-caution-color: @red;
-    --sidebar-header-border-color: @blue;
+    /* https://github.com/cognitive-engineering-lab/mdbook-quiz */
     --mdbook-incorrect: @red;
     --mdbook-correct: @green;
 
